fix(CSS) : alignement dans édit
[6][DONE]

--- a/resources/css/edit.css
+++ b/resources/css/edit.css
@@ -57,6 +57,10 @@ form div p {
     margin-bottom: 0;
 }
 
+.form-group{
+    padding-left: 0;
+}
+
 form div:last-of-type {
     display: flex;
     align-items: center;
